docs: updated to BEM Methodology 1

--- a/index.html
+++ b/index.html
@@ -36,32 +36,32 @@
             </section>
             <br/>
             <section>
-                <div>
-                    <h2>Index</h2>
+                <div class="index">
+                    <h2 class="index__title">Index</h2>
                     <ol>
-                        <li><a href="https://mavefers.github.io/html-css-es/1-intro-html.html" target="_blank">intro</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/2-frontend.html" target="_blank">frontend</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/3-backend-devops-deploy.html" target="_blank" rel="noopener noreferrer">backend-devops-deploy</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/4-fullstack.html" target="_blank" rel="noopener noreferrer">fullstack</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/5-static-and-dynamic-pages.html" target="_blank" rel="noopener noreferrer">static-and-dynamic-pages</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/6-html-web-anatomy.html" target="_blank" rel="noopener noreferrer">html-web-anatomy</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/7-index-basic-structure-head.html" target="_blank" rel="noopener noreferrer">index-basic-structure-head</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/8-index-basic-structure-body.html" target="_blank" rel="noopener noreferrer">index-basic-structure-body</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/9-challenge-shopping-list.html" target="_blank" rel="noopener noreferrer">challenge-shopping-list</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/10-html-tag-anatomy.html" target="_blank" rel="noopener noreferrer">html-tag-anatomy</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/11-types-of-images.html" target="_blank" rel="noopener noreferrer">types-of-images</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/12-figure-tag.html" target="_blank" rel="noopener noreferrer">figure-tag</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/13-image-optimization.html" target="_blank" rel="noopener noreferrer">image-optimization</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/14-img-tag.html" target="_blank" rel="noopener noreferrer">img-tag</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/15-video-tag.html" target="_blank" rel="noopener noreferrer">video-tag</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/16-form-and-imput-tag.html" target="_blank" rel="noopener noreferrer">form-and-imput-tag</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/17-calendar.html" target="_blank" rel="noopener noreferrer">calendar</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/18-autocomplete-and-require.html" target="_blank" rel="noopener noreferrer">autocomplete-and-require</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/19-select.html" target="_blank" rel="noopener noreferrer">select</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/20-input-type-submit-vs-button-tag.html" target="_blank" rel="noopener noreferrer">input-type-submit-vs-button-tag</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/21-intro-css.html" target="_blank" rel="noopener noreferrer">intro-css</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/22-uso-css-por-etiqueta-selector-class-id.html" target="_blank" rel="noopener noreferrer">uso-css-por-etiqueta-selector-class-id</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/23-pseudo-clases-y-pseudo-elementos.html" target="_blank" rel="noopener noreferrer">pseudo-clases-y-pseudo-elementos</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/1-intro-html.html" target="_blank">intro</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/2-frontend.html" target="_blank">frontend</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/3-backend-devops-deploy.html" target="_blank" rel="noopener noreferrer">backend-devops-deploy</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/4-fullstack.html" target="_blank" rel="noopener noreferrer">fullstack</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/5-static-and-dynamic-pages.html" target="_blank" rel="noopener noreferrer">static-and-dynamic-pages</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/6-html-web-anatomy.html" target="_blank" rel="noopener noreferrer">html-web-anatomy</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/7-index-basic-structure-head.html" target="_blank" rel="noopener noreferrer">index-basic-structure-head</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/8-index-basic-structure-body.html" target="_blank" rel="noopener noreferrer">index-basic-structure-body</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/9-challenge-shopping-list.html" target="_blank" rel="noopener noreferrer">challenge-shopping-list</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/10-html-tag-anatomy.html" target="_blank" rel="noopener noreferrer">html-tag-anatomy</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/11-types-of-images.html" target="_blank" rel="noopener noreferrer">types-of-images</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/12-figure-tag.html" target="_blank" rel="noopener noreferrer">figure-tag</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/13-image-optimization.html" target="_blank" rel="noopener noreferrer">image-optimization</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/14-img-tag.html" target="_blank" rel="noopener noreferrer">img-tag</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/15-video-tag.html" target="_blank" rel="noopener noreferrer">video-tag</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/16-form-and-imput-tag.html" target="_blank" rel="noopener noreferrer">form-and-imput-tag</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/17-calendar.html" target="_blank" rel="noopener noreferrer">calendar</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/18-autocomplete-and-require.html" target="_blank" rel="noopener noreferrer">autocomplete-and-require</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/19-select.html" target="_blank" rel="noopener noreferrer">select</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/20-input-type-submit-vs-button-tag.html" target="_blank" rel="noopener noreferrer">input-type-submit-vs-button-tag</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/21-intro-css.html" target="_blank" rel="noopener noreferrer">intro-css</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/22-uso-css-por-etiqueta-selector-class-id.html" target="_blank" rel="noopener noreferrer">uso-css-por-etiqueta-selector-class-id</a></li>
+                        <li class="index__li"><a class="index__link" href="https://mavefers.github.io/html-css-es/23-pseudo-clases-y-pseudo-elementos.html" target="_blank" rel="noopener noreferrer">pseudo-clases-y-pseudo-elementos (Metodología BEM).</a></li>
                     </ol>
                 </div>
                 <br/>
@@ -127,7 +127,7 @@
                             <div class="images">
                                 <figure class="images__bloque">
                                     <img class="images__img" src="./images/bem.jpg" alt="Ejemplo de BEM">
-                                    <figcaption class="images__descripcion">Este es un modelo de BEM.<br/>En esta imagen podemos observar dos botones similares, ambos vendrían siendo de un solo bloque, por su tamaño y tipo de letra, y sus modificadores vendrían siendo el color el grosor de la letra y los íconos, ya que estos son características propias de cada botón realizado.</figcaption>
+                                    <figcaption class="images__description images__description--firstline">Este es un modelo de BEM.<br/>En esta imagen podemos observar dos botones similares, ambos vendrían siendo de un solo bloque, por su tamaño y tipo de letra, y sus modificadores vendrían siendo el color el grosor de la letra y los íconos, ya que estos son características propias de cada botón realizado.</figcaption>
                                 </figure>
                             </div>
                         </div>
