docs: added new div 'pseudo-elements extra'

--- a/23-pseudo-clases-y-pseudo-elementos.html
+++ b/23-pseudo-clases-y-pseudo-elementos.html
@@ -29,6 +29,24 @@
                 </div>
             </section>
         </article>
+        <article>
+            <section>
+                <div>
+                    <h4>Algunos Pseudo-elementos:</h4>
+                    <div class="container-list-def"> <!-- Contenedor: contenedor-bloque -->
+                        <dl class="list-def list-def--color-red"> <!--Bloque: bloque -->
+                            <dt class="list-def__title">:empty</dt> <!-- Hijo de bloque: bloque__hijo-debloque -->
+                            <dd class="list-def__extracto">Sirve para solo seleccionar los elementos que estén vacíos, incluyendo todo tipo de caracter o texto, comentario y espacio. Tiene que estar totalmente vacío.<br/>Ejemplo: <span>p:empty {display: flex;}</span><br/><span>< p >< / p > - Sí será seleccionado.<br/>< p > < / p > - No será seleccionado.<br/>< p >< !-- Este es un comentario -- >< / p > - No será seleccionado.</span></dd>
+                        </dl>
+                        <dl class="list-def list-def--color-yellow"> <!-- bloque -->
+                            <dt class="list-def__title">:empty</dt>
+                            <dd class="list-def__extracto">Sirve para solo seleccionar los elementos que estén vacíos, incluyendo todo tipo de caracter o texto, comentario y espacio. Tiene que estar totalmente vacío.<br/>Ejemplo: <span>p:empty {display: flex;}</span><br/><span>< p >< / p > - Sí será seleccionado.<br/>< p > < / p > - No será seleccionado.<br/>< p >< !-- Este es un comentario -- >< / p > - No será seleccionado.</span></dd>
+                        </dl>
+
+                    </div>
+                </div>
+            </section>
+        </article>
     </main>
 </body>
 </html>
