--- a/23-pseudo-clases-y-pseudo-elementos.html
+++ b/23-pseudo-clases-y-pseudo-elementos.html
@@ -34,13 +34,13 @@
                 <div>
                     <h4>Algunos Pseudo-elementos:</h4>
                     <div class="container-list-def"> <!-- Contenedor: contenedor-bloque -->
-                        <dl class="list-def list-def--color-red"> <!--Bloque: bloque -->
-                            <dt class="list-def__title">:empty</dt> <!-- Hijo de bloque: bloque__hijo-debloque -->
-                            <dd class="list-def__extracto">Sirve para solo seleccionar los elementos que estén vacíos, incluyendo todo tipo de caracter o texto, comentario y espacio. Tiene que estar totalmente vacío.<br/>Ejemplo: <span>p:empty {display: flex;}</span><br/><span>< p >< / p > - Sí será seleccionado.<br/>< p > < / p > - No será seleccionado.<br/>< p >< !-- Este es un comentario -- >< / p > - No será seleccionado.</span></dd>
+                        <dl class="list-def list-def--background-green list-def--border-ridge list-def--border-gold"> <!--Bloque: bloque -->
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-green">:empty</dt> <!-- Hijo de bloque: bloque__hijo-debloque -->
+                            <dd class="list-def__extracto list-def__extracto--text-golden">Sirve para solo seleccionar los elementos que estén vacíos, incluyendo todo tipo de caracter o texto, comentario y espacio. Tiene que estar totalmente vacío.<br/>Ejemplo: <span>p:empty {display: flex;}</span><br/><span>< p >< / p > - Sí será seleccionado.<br/>< p > < / p > - No será seleccionado.<br/>< p >< !-- Este es un comentario -- >< / p > - No será seleccionado.</span></dd>
                         </dl>
-                        <dl class="list-def list-def--color-yellow"> <!-- bloque -->
-                            <dt class="list-def__title">:empty</dt>
-                            <dd class="list-def__extracto">Sirve para solo seleccionar los elementos que estén vacíos, incluyendo todo tipo de caracter o texto, comentario y espacio. Tiene que estar totalmente vacío.<br/>Ejemplo: <span>p:empty {display: flex;}</span><br/><span>< p >< / p > - Sí será seleccionado.<br/>< p > < / p > - No será seleccionado.<br/>< p >< !-- Este es un comentario -- >< / p > - No será seleccionado.</span></dd>
+                        <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:empty</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden">Sirve para solo seleccionar los elementos que estén vacíos, incluyendo todo tipo de caracter o texto, comentario y espacio. Tiene que estar totalmente vacío.<br/>Ejemplo: <span>p:empty {display: flex;}</span><br/><span>< p >< / p > - Sí será seleccionado.<br/>< p > < / p > - No será seleccionado.<br/>< p >< !-- Este es un comentario -- >< / p > - No será seleccionado.</span></dd>
                         </dl>
 
                     </div>
