docs: added more type of pseudo-classes

--- a/23-pseudo-clases-y-pseudo-elementos.html
+++ b/23-pseudo-clases-y-pseudo-elementos.html
@@ -32,15 +32,71 @@
         <article>
             <section>
                 <div>
-                    <h4>Algunos Pseudo-elementos:</h4>
+                    <h4>Algunos Pseudo-classes:</h4>
                     <div class="container-list-def"> <!-- Contenedor: contenedor-bloque -->
                         <dl class="list-def list-def--background-green list-def--border-ridge list-def--border-gold"> <!--Bloque: bloque -->
                             <dt class="list-def__title list-def__title--background-golden list-def__title--text-green">:empty</dt> <!-- Hijo de bloque: bloque__hijo-debloque -->
                             <dd class="list-def__extracto list-def__extracto--text-golden">Sirve para solo seleccionar los elementos que estén vacíos, incluyendo todo tipo de caracter o texto, comentario y espacio. Tiene que estar totalmente vacío.<br/>Ejemplo: <span>p:empty {display: flex;}</span><br/><span>< p >< / p > - Sí será seleccionado.<br/>< p > < / p > - No será seleccionado.<br/>< p >< !-- Este es un comentario -- >< / p > - No será seleccionado.</span></dd>
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
-                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:empty</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden">Sirve para solo seleccionar los elementos que estén vacíos, incluyendo todo tipo de caracter o texto, comentario y espacio. Tiene que estar totalmente vacío.<br/>Ejemplo: <span>p:empty {display: flex;}</span><br/><span>< p >< / p > - Sí será seleccionado.<br/>< p > < / p > - No será seleccionado.<br/>< p >< !-- Este es un comentario -- >< / p > - No será seleccionado.</span></dd>
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                                <div class="ejm-img">
+                                    <span class="ejm-img__title">Ejemplo:</span>
+                                    <figure class="ejm-img__contenido">
+                                        <img class="ejm-img__img" src="./images/first-child.jpg" alt="Ejemplo de First-child." />
+                                        <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
+                                    </figure>
+                                </div>
+                            </dd>
+                        </dl>
+                        <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                                <div class="ejm-img">
+                                    <span class="ejm-img__title">Ejemplo:</span>
+                                    <figure class="ejm-img__contenido">
+                                        <img class="ejm-img__img" src="./images/first-child.jpg" alt="Ejemplo de First-child." />
+                                        <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
+                                    </figure>
+                                </div>
+                            </dd>
+                        </dl>
+                        <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                                <div class="ejm-img">
+                                    <span class="ejm-img__title">Ejemplo:</span>
+                                    <figure class="ejm-img__contenido">
+                                        <img class="ejm-img__img" src="./images/first-child.jpg" alt="Ejemplo de First-child." />
+                                        <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
+                                    </figure>
+                                </div>
+                            </dd>
+                        </dl>
+                        <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                                <div class="ejm-img">
+                                    <span class="ejm-img__title">Ejemplo:</span>
+                                    <figure class="ejm-img__contenido">
+                                        <img class="ejm-img__img" src="./images/first-child.jpg" alt="Ejemplo de First-child." />
+                                        <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
+                                    </figure>
+                                </div>
+                            </dd>
+                        </dl>
+                        <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                                <div class="ejm-img">
+                                    <span class="ejm-img__title">Ejemplo:</span>
+                                    <figure class="ejm-img__contenido">
+                                        <img class="ejm-img__img" src="./images/first-child.jpg" alt="Ejemplo de First-child." />
+                                        <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
+                                    </figure>
+                                </div>
+                            </dd>
                         </dl>
 
                     </div>
