--- a/23-pseudo-clases-y-pseudo-elementos.html
+++ b/23-pseudo-clases-y-pseudo-elementos.html
@@ -8,25 +8,24 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Pseudo-clases y Pseudoelementos</h1>
+    <header class="cabecera">
+        <h1 class="cabecera__titulo">Pseudo-clases y Pseudoelementos</h1>
     </header>
     <main>
         <article>
             <section>
-                <div>
-                    <h2>Pseudo-classes</h2>
-                    <p class="p-main-def" id="p-def-pc">Especifica un estado especial del elemento seleccionado, para que una vez activado recién se aplique el estilo que hemos declarado.<br/>Por ejemplo: se aplicará un estilo, solo cuando el usuario haga "hover" sobre el elemento seleccionado. Es como decir, "si realiza esta acción, se aplicará este estilo".</p>
-                    <p id="p-def-pc2">Todas las clases, sin excepción, son una palabra precedida por dos puntos (:).</p>
-                    <dl>
-                        <dt id="dt-pc">Es posible combinar más de dos <span id="span-pc-dt">pseudo-classes</span> en un solo selector.<br/>Por ejemplo:</dt>
-                        <dd>a<span id="span-pc-link">:link</span><span id="span-pc-hover">:hover</span> {color: red;}</dd>
-                    </dl>
-                    <input type="button" value="aaaaa">
-                </div>
-                <div>
-                    <p id="p-div2">Se puede aplicar "Pseudo-classes" con "Pseudo elementos" en <span id="span-div2">un solo selector</span>, poniendo primero los pseudo-classes, seguido de los pseudo elementos.</p>
-                </div>
+                <div class="pseclass">
+                    <h2 class="pseclass__title">Pseudo-classes</h2>
+                    <p class="pseclass__def pseclass__def--firstline-violet">Especifica un estado especial del elemento seleccionado, para que una vez activado recién se aplique el estilo que hemos declarado.<br/>Por ejemplo: se aplicará un estilo, solo cuando el usuario haga "hover" sobre el elemento seleccionado. Es como decir, "si realiza esta acción, se aplicará este estilo".</p>
+                    <p class="pseclass__extra pseclass__extra--green">Todas las clases, sin excepción, son una palabra precedida por dos puntos (:).</p>
+                    <div class="pseclass__ejm">
+                        <dl class="pseclass__dl">
+                            <dt class="pseclass__ejm-def pseclass__ejm-def--color-hllwn">Es posible combinar más de dos <span class="pseclass__spanbold">pseudo-classes</span> en un solo selector.<br/>Por ejemplo:</dt>
+                            <dd>a<span class="pseclass__ejm-code pseclass__ejm-texto--red">:link</span><span class="pseclass__ejm-hover--blue">:hover</span> {color: red;}</dd>
+                        </dl>
+                        <input class="pseclass__boton pseclass__boton--yellow" type="button" value="aaaaa">
+                        <p class="pseclass__ejm-extra">Se puede aplicar "Pseudo-classes" con "Pseudo elementos" en <span class="pseclass__spanbold">un solo selector</span>, poniendo primero los pseudo-classes, seguido de los pseudo elementos.</p>
+                    </div>
             </section>
         </article>
         <article>
@@ -40,7 +39,7 @@
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
                             <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
@@ -51,24 +50,24 @@
                             </dd>
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
-                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:last-child</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Funciona similar a :first-child, pero en vez de seleccionar los primeros, selecciona los últimos.</span><br/><span>Sirve para seleccionar el elemento último hijo del elemento elegido por medio de su selector, como también, el último elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
-                                        <img class="ejm-img__img" src="./images/first-child.jpg" alt="Ejemplo de First-child." />
+                                        <img class="ejm-img__img" src="./images/last-child.jpg" alt="Ejemplo de Last-child." />
                                         <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
                                     </figure>
                                 </div>
                             </dd>
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
-                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">#</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>#</span><br/>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
-                                        <img class="ejm-img__img" src="./images/first-child.jpg" alt="Ejemplo de First-child." />
+                                        <img class="ejm-img__img" src="." alt="Ejemplo de Last-child." />
                                         <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
                                     </figure>
                                 </div>
