--- a/22-uso-css-por-etiqueta-selector-class-id.html
+++ b/22-uso-css-por-etiqueta-selector-class-id.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./css/class-22/style.css"/>
+    <link rel="stylesheet" href="./css/22-uso-css-por-etiqueta-selector-class-id.css"/>
     <title>SELECTORES y CLASES</title>
 </head>
 <body>
