docs: css href updated

--- a/23-pseudo-clases-y-pseudo-elementos.html
+++ b/23-pseudo-clases-y-pseudo-elementos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/class-23/style.css">
+    <link rel="stylesheet" href="./css/23-pseudo-clases-y-pseudo-elementos.css">
     <title>Document</title>
 </head>
 <body>
@@ -62,8 +62,8 @@
                             </dd>
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
-                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">#</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>#</span><br/>
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-of-type</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Se seleccionará al elemento que sea el PRIMER HERMANO de un grupo de elementos iguales. Los primeros hijos de su tipo, dentro de su propio nivel de hermanos.</span><br/>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
@@ -103,5 +103,7 @@
             </section>
         </article>
     </main>
+    <footer>
+    </footer>
 </body>
 </html>
