--- a/23-pseudo-clases-y-pseudo-elementos.html
+++ b/23-pseudo-clases-y-pseudo-elementos.html
@@ -38,7 +38,7 @@
                             <dd class="list-def__extracto list-def__extracto--text-golden">Sirve para solo seleccionar los elementos que estén vacíos, incluyendo todo tipo de caracter o texto, comentario y espacio. Tiene que estar totalmente vacío.<br/>Ejemplo: <span>p:empty {display: flex;}</span><br/><span>< p >< / p > - Sí será seleccionado.<br/>< p > < / p > - No será seleccionado.<br/>< p >< !-- Este es un comentario -- >< / p > - No será seleccionado.</span></dd>
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
-                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt> <!-- se enfocará todos los *PRIMEROS* HIJOS de ese elemento padre o de ese contenedor que hemos seleccionado. Si el selector declarado NO ES PRIMER HIJO, NO SELECCIONARÁ NADA. -->
                             <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
@@ -51,11 +51,11 @@
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
                             <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:last-child</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Funciona similar a :first-child, pero en vez de seleccionar los primeros, selecciona los últimos.</span><br/><span>Sirve para seleccionar el elemento último hijo del elemento elegido por medio de su selector, como también, el último elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Funciona similar a :first-child, pero en vez de seleccionar los primeros, seleccionará los últimos.</span><br/><span>Sirve para seleccionar el elemento último hijo del elemento elegido por medio de su selector, como también, el último elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
-                                        <img class="ejm-img__img" src="./images/last-child.jpg" alt="Ejemplo de Last-child." />
+                                        <img class="ejm-img__img" src="./images/last-child.jpg" alt="Ejemplo de last-child." />
                                         <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
                                     </figure>
                                 </div>
@@ -67,39 +67,94 @@
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
-                                        <img class="ejm-img__img" src="." alt="Ejemplo de Last-child." />
+                                        <img class="ejm-img__img" src="./images/first-of-type.png" alt="Ejemplo de first-of-type." />
                                         <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
                                     </figure>
                                 </div>
                             </dd>
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
-                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:last-of-type</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Funciona similar a :first-of-type, pero en vez de seleccionar los primero, seleccionará a los últimos.</span><br/>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
-                                        <img class="ejm-img__img" src="./images/first-child.jpg" alt="Ejemplo de First-child." />
+                                        <img class="ejm-img__img" src="./images/first-last-child.png" alt="Ejemplo de last-of-type." />
+                                        <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://lenguajecss.com/css/selectores/pseudoclases-avanzadas/#primer-y-%C3%BAltimo-hijo" target="_blank">lenguajecss.com - Pseudoclases CSS avanzadas (Primer y último hijo)</a></figcaption>
+                                    </figure>
+                                </div>
+                            </dd>
+                        </dl>
+                        <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:nth-child(#)</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>nth-child (#) - Seleccionará el # hijo, contando todos los hijos, así no tengan el mismo selector. Tienen que ser la misma línea jerárquica de hermanos. El numero de hermano, puesto, tiene que coincidir con el selector declarado, si no tiene el mismo selector, no sucede nada.</span><br/>
+                                <div class="ejm-img">
+                                    <span class="ejm-img__title">Ejemplo:</span>
+                                    <figure class="ejm-img__contenido">
+                                        <img class="ejm-img__img" src="./images/" alt="Ejemplo de #." />
                                         <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
                                     </figure>
                                 </div>
                             </dd>
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
-                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span><br/>
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:nth-of-type</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>#</span><br/>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
-                                        <img class="ejm-img__img" src="./images/first-child.jpg" alt="Ejemplo de First-child." />
+                                        <img class="ejm-img__img" src="./images/" alt="Ejemplo de #." />
                                         <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="https://losapuntesdemajo.vercel.app/" target="_blank">losapuntesdemajo - CSS (Intermedio)</a></figcaption>
                                     </figure>
                                 </div>
                             </dd>
                         </dl>
-
                     </div>
                 </div>
+                <section>
+                    <h3>aaaa</h3>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                    <p>holaaa</p>
+                </section>
+                <section>
+                    <div>
+                        <h3>aaaa</h3>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="bax"></div>
+                        <p>asdad</p>
+                        <div>
+                            <div class="box"><p>bbb</p></div>
+                            <div class="box"></div>
+                            <div class="box"></div>
+                            <div class="box"></div>
+                        <div>
+                            <div class="box"></div>
+                            <div class="box"></div>
+                            <div>
+                                <div class="box"></div>
+                            </div>
+                        </div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                    </div>
+                    <div>
+                        <div class="bax"></div>
+                        <div class="bax"></div>
+                        <div class="bax"></div>
+                        <div class="bax"></div>
+                        <div class="bax"></div>
+                        <div class="box"></div>
+                        <div class="bax"></div>
+                        <div class="bax"></div>
+                    </div>
+                </section>
             </section>
         </article>
     </main>
