--- a/23-pseudo-clases-y-pseudo-elementos.html
+++ b/23-pseudo-clases-y-pseudo-elementos.html
@@ -30,7 +30,7 @@
         </article>
         <article>
             <section>
-                <div>
+                <div class="cba">
                     <h4>Algunos Pseudo-classes:</h4>
                     <div class="container-list-def"> <!-- Contenedor: contenedor-bloque -->
                         <dl class="list-def list-def--background-green list-def--border-ridge list-def--border-gold"> <!--Bloque: bloque -->
@@ -39,7 +39,7 @@
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
                             <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-child</dt> <!-- se enfocará todos los *PRIMEROS* HIJOS de ese elemento padre o de ese contenedor que hemos seleccionado. Si el selector declarado NO ES PRIMER HIJO, NO SELECCIONARÁ NADA. -->
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento primer hijo del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Sirve para seleccionar el elemento "primer hijo" del elemento elegido por medio de su selector, como también, el primer elemento que forma parte de la lista de selectores similares o hermanos, como una class.</span>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
@@ -63,7 +63,7 @@
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
                             <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:first-of-type</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Se seleccionará al elemento que sea el PRIMER HERMANO de un grupo de elementos iguales. Los primeros hijos de su tipo, dentro de su propio nivel de hermanos.</span><br/>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Se seleccionará al elemento que sea el PRIMER HERMANO de un grupo de elementos iguales. Los primeros hijos de su tipo, dentro de su propio nivel de hermanos.</span><br/><span>first-of-type cuenta a todos los selectores que sean del mismo tipo, que estén declarados en todo el documento CSS, sin importar la jerarquía, o sea sin importar que algunos estén en la posición de padres, otros en hijos, abuelos, o en cualquier otro espacio; lo que importa es el nivel en el que es declarado dentro del orden de CASCADA, de arriba hacia abajo.</span><br/>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
@@ -75,7 +75,7 @@
                         </dl>
                         <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
                             <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:last-of-type</dt>
-                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Funciona similar a :first-of-type, pero en vez de seleccionar los primero, seleccionará a los últimos.</span><br/>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>Funciona similar a :first-of-type, pero en vez de seleccionar los primero, seleccionará a los últimos.</span><br/><span>last-of-type cuenta a todos los selectores que sean del mismo tipo, que estén declarados en todo el documento CSS, sin importar la jerarquía, o sea sin importar que algunos estén en la posición de padres, otros en hijos, abuelos, o en cualquier otro espacio; lo que importa es el nivel en el que es declarado dentro del orden de CASCADA, de arriba hacia abajo.</span><br/>
                                 <div class="ejm-img">
                                     <span class="ejm-img__title">Ejemplo:</span>
                                     <figure class="ejm-img__contenido">
@@ -109,10 +109,22 @@
                                 </div>
                             </dd>
                         </dl>
+                        <dl class="list-def list-def--background-navyblue list-def--border-gold list-def--border-double"> <!-- bloque -->
+                            <dt class="list-def__title list-def__title--background-golden list-def__title--text-blue">:nth-of-type</dt>
+                            <dd class="list-def__extracto list-def__extracto--text-golden"><span>La jerarquia es muy importante cuando se trata de crear nuevas Reglas CSS, usando las pseudo-classes: first-child, last-child y nth-child(n); porque para que el estilo sea aplicado, el elemento que se intenta llamar, tiene que cumplir con las siguientes reglas: que cumpla la posición indicada en orden de CASCADA, quiere decir que, si la pseudo-classe es :first-child, el elemento a estilizar, tiene que ser el primer hijo declarado dentro de esa linea jerárquica de hermanos y obligatoriamente tiene que cumlpir con el mismo selector declarado, de lo contrario, si ese elemento no tiene el mismo selector, no se aplicarán estilos a ningún selector, porque se respeta la línea jerárquica, luego se revisa si tiene el mismo selector; y cuando la pseudo-classe es :last-child, sucede algo similar, pero en vez de ser el primer hijo será el último hijo, y también se estarán respetando todas las reglas anteriores, que son: jerarquía, que cumpla la posición en el orden de Cascada, y que tenga el mismo selector.</span><br/>
+                                <div class="ejm-img">
+                                    <span class="ejm-img__title">Ejemplo:</span>
+                                    <figure class="ejm-img__contenido">
+                                        <img class="ejm-img__img" src="./images/" alt="Ejemplo de #." />
+                                        <figcaption class="ejm-img__pie-texto">Fuente: <a class="ejm-img__pie-link ejm-img__pie-link--gold" href="#" target="_blank">#</a></figcaption>
+                                    </figure>
+                                </div>
+                            </dd>
+                        </dl>
                     </div>
                 </div>
-                <section>
-                    <h3>aaaa</h3>
+                <section class="abc">
+                    <h3>primero</h3>
                     <div class="box"></div>
                     <div class="box"></div>
                     <div class="box"></div>
@@ -136,7 +148,7 @@
                         <div>
                             <div class="box"></div>
                             <div class="box"></div>
-                            <div>
+                            <div class="abc">
                                 <div class="box"></div>
                             </div>
                         </div>
